fix img and alignment

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ nav {
 }
 
 nav .inner {
-  max-width: 780px;
+  max-width: 900px;
   margin: 0 auto;
   padding: 0 2rem;
   height: 52px;
